# fasma

./: LICENSE  README.md  command_line.py  pyproject.toml
doc/notebooks/: mo_pop_analysis_example.ipynb  transition_analysis_example.ipynb
src/fasma/: __main__.py
src/fasma/chronus/: parse_basic.py  parse_cas.py  parse_chronus.py  parse_matrices.py  parse_pop.py  parse_td.py
src/fasma/core/: boxes.py  conversion.py  df_filters.py  df_generators.py  file_compressor.py  file_reader.py  functional.py  keyword_trie.py  matrices.py  messages.py  parse_excitation.py  plotter.py  printer.py
src/fasma/core/dataclasses/: boxes.py  spectrum.py
src/fasma/core/dataclasses/data/: basic.py  electron.py  excitation.py  methodology.py  pop.py  spectra.py
src/fasma/gaussian/: parse_basic.py  parse_cas.py  parse_functions.py  parse_gaussian.py  parse_matrices.py  parse_pop.py  parse_td.py
